tests/compile_fail/ktstr_test_max_cpus_zero.stderr
error: max_cpus must be > 0 (a zero cap excludes every host from the gauntlet — use a non-zero cap, or omit the field to inherit the scheduler-level default)
 --> tests/compile_fail/ktstr_test_max_cpus_zero.rs:6:1
  |
6 | #[ktstr_test(max_cpus = 0)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `ktstr_test` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused import: `anyhow::Result`
 --> tests/compile_fail/ktstr_test_max_cpus_zero.rs:1:5
  |
1 | use anyhow::Result;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `ktstr::assert::AssertResult`
 --> tests/compile_fail/ktstr_test_max_cpus_zero.rs:2:5
  |
2 | use ktstr::assert::AssertResult;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `ktstr::scenario::Ctx`
 --> tests/compile_fail/ktstr_test_max_cpus_zero.rs:4:5
  |
4 | use ktstr::scenario::Ctx;
  |     ^^^^^^^^^^^^^^^^^^^^
